lanecwe-Prod/src/objects/Implementation_Services__c.object
<CustomObject>
    <fields>
        <fullName>TS3_Train_Status_Set__c</fullName>
        <description>Timestamp tracking when Train Status has been set</description>
        <label>TS3_Train Status_Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS3_Train_Status_Unselected__c</fullName>
        <description>Timestamp tracking when Train Status has been set</description>
        <label>TS3_Train Status Unselected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS8_Bill_Review_Status_Set__c</fullName>
        <inlineHelpText>Timestamp tracking when Bill Review Status has been set</inlineHelpText>
        <label>TS8_Bill Review Status_Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS8_Bill_Review_Status_Unselected__c</fullName>
        <description>Timestamp tracking when Bill Review Status has been set</description>
        <label>TS8_Bill Review Status Unselected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS9_Adoption_Status_Set__c</fullName>
        <description>Timestamp tracking when Adoption Status has been set</description>
        <label>TS9_Adoption Status_Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS9_Adoption_Status_Unselected__c</fullName>
        <description>Timestamp tracking when Adoption Status has been set</description>
        <label>TS9_Adoption Status Unselected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_Company_Created__c</fullName>
        <description>Used to update with timestamp via WF Rule</description>
        <inlineHelpText>Set the first time you select the Company Created checkbox</inlineHelpText>
        <label>Company Created Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_Discover_Status_Set__c</fullName>
        <description>Timestamp tracking when Discovery Status has been set</description>
        <label>TS_Discovery Status_Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_Discover_Status_Unselected__c</fullName>
        <description>Timestamp tracking when Discovery Status has been set</description>
        <label>TS_Discovery Status Unselected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_Final_CIF_Uploaded__c</fullName>
        <description>Used to update with timestamp via WF Rule</description>
        <inlineHelpText>Set the first time you select the Final CIF Uploaded checkbox</inlineHelpText>
        <label>Final CIF Uploaded Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_Hand_off_Status_Set__c</fullName>
        <description>Timestamp tracking when Hand-off Status has been set</description>
        <label>TS_Hand-off Status_Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_Hand_off_Status_Unselected__c</fullName>
        <description>Timestamp tracking when Hand-off Status has been set</description>
        <label>TS_Hand-off Status Unselected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_License_List_Uploaded__c</fullName>
        <description>Used to update with timestamp via WF Rule</description>
        <inlineHelpText>Set the first time you select the License List Uploaded checkbox</inlineHelpText>
        <label>License List Uploaded Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_On_Hold_Set__c</fullName>
        <description>Timestamp tracking when On Hold Status has been set</description>
        <label>TS_On Hold Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_On_Hold_Unselected__c</fullName>
        <description>Timestamp tracking when On Hold Status has been unselected</description>
        <label>TS_On Hold Unselected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_Plan_Status_Set__c</fullName>
        <description>Timestamp tracking when Plan Status has been set</description>
        <label>TS_Plan Status_Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_Plan_Status_Unselected__c</fullName>
        <description>Timestamp tracking when Plan Status has been set</description>
        <label>TS_Plan Status Unselected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_Rates_Entered__c</fullName>
        <description>Used to update with timestamp via WF Rule</description>
        <inlineHelpText>Set the first time you select the Rates Entered checkbox</inlineHelpText>
        <label>Rates Entered Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technical_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Services3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_at_Build_Status__c</fullName>
        <description>IF(
(TS1_Build_Status_UnSelected__c -  TS1_Build_Status_Set__c) &gt; 26, ((TS1_Build_Status_UnSelected__c -  TS1_Build_Status_Set__c) -8), 
IF(
(TS1_Build_Status_UnSelected__c -  TS1_Build_Status_Set__c) &gt; 19, ((TS1_Build_Status_UnSelected__c -  TS1_Build_Status_Set__c) -6), 
IF(
(TS1_Build_Status_UnSelected__c -  TS1_Build_Status_Set__c) &gt; 12, ((TS1_Build_Status_UnSelected__c -  TS1_Build_Status_Set__c) -4), 
IF(
(TS1_Build_Status_UnSelected__c -  TS1_Build_Status_Set__c) &gt; 5, ((TS1_Build_Status_UnSelected__c -  TS1_Build_Status_Set__c) -2), 



(TS1_Build_Status_UnSelected__c -  TS1_Build_Status_Set__c)
))))</description>
        <formula>CASE(MOD( DATEVALUE(TS1_Build_Status_Set__c ) - DATE(1985,6,24),7),

0 , CASE( MOD(( DATEVALUE(TS1_Build_Status_UnSelected__c   )) - (DATEVALUE(TS1_Build_Status_Set__c )),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(( DATEVALUE(TS1_Build_Status_UnSelected__c   )) - (DATEVALUE(TS1_Build_Status_Set__c )),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(( DATEVALUE(TS1_Build_Status_UnSelected__c   )) - (DATEVALUE(TS1_Build_Status_Set__c )),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(( DATEVALUE(TS1_Build_Status_UnSelected__c   )) - (DATEVALUE(TS1_Build_Status_Set__c )),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(( DATEVALUE(TS1_Build_Status_UnSelected__c   )) - (DATEVALUE(TS1_Build_Status_Set__c )),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(( DATEVALUE(TS1_Build_Status_UnSelected__c   )) -(DATEVALUE(TS1_Build_Status_Set__c )),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(( DATEVALUE(TS1_Build_Status_UnSelected__c   )) - (DATEVALUE(TS1_Build_Status_Set__c )),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( (( DATEVALUE(TS1_Build_Status_UnSelected__c   )) - (DATEVALUE(TS1_Build_Status_Set__c ))) )/7)*5)</formula>
        <inlineHelpText>This displays approximate days that this record had the Implementation Stage set to include Build.</inlineHelpText>
        <label>Days at Build Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_10_Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top 10 Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_10_Pre_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top 10 Pre-Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Specialist_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the User object to select the Training Specialist</inlineHelpText>
        <label>Training Specialist Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Implementation Services</label>
    <listViews>
        <fullName>All_Cancelled_Implementations_Canada</fullName>
        <columns>Related_Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Completed_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>CAN - All Cancelled Implementations</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Canada_IST</roleAndSubordinates>
            <roleAndSubordinates>EMEA_Canada_IST_Role</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Completed_Implementations1</fullName>
        <columns>NAME</columns>
        <columns>IST_Status__c</columns>
        <columns>Related_Account__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>Implementation_Owner__c</columns>
        <columns>Bill_Review_Completed__c</columns>
        <columns>Hand_off_Completed__c</columns>
        <columns>Adoption_Specialist_Assigned__c</columns>
        <columns>Training_Specialist_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Completed_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <label>All Completed Implementations</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>NA_IST_Team</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Completed_Implementations_Canada</fullName>
        <columns>NAME</columns>
        <columns>IST_Status__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>Implementation_Owner__c</columns>
        <columns>Bill_Review_Completed__c</columns>
        <columns>Hand_off_Completed__c</columns>
        <columns>Adoption_Specialist_Assigned__c</columns>
        <columns>Training_Specialist_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Completed_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>CAN - All Completed Implementations</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Canada_IST</roleAndSubordinates>
            <roleAndSubordinates>EMEA_Canada_IST_Role</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Completed_Implementations_EMEA</fullName>
        <columns>NAME</columns>
        <columns>IST_Status__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>Implementation_Owner__c</columns>
        <columns>Bill_Review_Completed__c</columns>
        <columns>Hand_off_Completed__c</columns>
        <columns>Adoption_Specialist_Assigned__c</columns>
        <columns>Training_Specialist_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Completed_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>notEqual</operation>
            <value>Canada</value>
        </filters>
        <label>EMEA - All Completed Implementations</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_IST_Team_Implementation_Mgr</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Completed_Implementations_EMEA1</fullName>
        <columns>NAME</columns>
        <columns>IST_Status__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>Adoption_Specialist_Assigned__c</columns>
        <columns>Implementation_Owner__c</columns>
        <columns>IST_Recent_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Completed_Status__c</field>
            <operation>equals</operation>
            <value>No IS Assigned</value>
        </filters>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>notEqual</operation>
            <value>Canada</value>
        </filters>
        <label>EMEA - All Review/Auto Implementations</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_IST_Team_Implementation_Mgr</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Implementations</fullName>
        <columns>NAME</columns>
        <columns>Related_Account__c</columns>
        <columns>IST_Status__c</columns>
        <columns>IST_Completed_Status__c</columns>
        <columns>Implementation_Owner__c</columns>
        <columns>Training_Specialist_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>IST_Completed_Status__c</field>
            <operation>notEqual</operation>
            <value>No IS Assigned</value>
        </filters>
        <label>All Implementations (Excludes Reviewed)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>NA_IST_Team</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Implementations_EMEA</fullName>
        <columns>NAME</columns>
        <columns>IST_Status__c</columns>
        <columns>IST_Completed_Status__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Bill_Review_Completed__c</columns>
        <columns>Hand_off_Completed__c</columns>
        <columns>Training_Specialist_Assigned__c</columns>
        <columns>Adoption_Specialist_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>notEqual</operation>
            <value>Canada</value>
        </filters>
        <label>EMEA - All Implementations</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_IST_Team_Implementation_Mgr</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Implementations</fullName>
        <columns>NAME</columns>
        <columns>Sales_Engineer__c</columns>
        <columns>Pre_Implementation_Survey__c</columns>
        <columns>Implementation_Owner__c</columns>
        <columns>Related_Account__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>IST_Status__c</columns>
        <columns>Training_Specialist_Assigned__c</columns>
        <columns>Company_Created__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Completed_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>Sales_Engineer__c</field>
            <operation>contains</operation>
            <value>mitchell,garko</value>
        </filters>
        <label>NA Tech Engineer Assignments</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>NA_IST_Team</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Implementations1</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Owner__c</columns>
        <columns>Related_Account__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>IST_Status__c</columns>
        <columns>Training_Specialist_Assigned__c</columns>
        <columns>Bill_Review_Completed__c</columns>
        <columns>Hand_off_Completed__c</columns>
        <columns>Adoption_Specialist_Assigned__c</columns>
        <columns>Implementation_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Completed_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>Implementation_Owner__c</field>
            <operation>notEqual</operation>
            <value>karen schade</value>
        </filters>
        <filters>
            <field>Training_Specialist_Assigned__c</field>
            <operation>notContain</operation>
            <value>lisko,rambo,mejia,nic,nancy</value>
        </filters>
        <label>Gina&apos;s Unassigned Implementations</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>NA_IST_Team</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Implementations_EMEA</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Owner__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>IST_Status__c</columns>
        <columns>IST_Completed_Status__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Bill_Review_Completed__c</columns>
        <columns>Hand_off_Completed__c</columns>
        <columns>Adoption_Specialist_Assigned__c</columns>
        <columns>Training_Specialist_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Completed_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>notEqual</operation>
            <value>Canada</value>
        </filters>
        <label>EMEA - All Open Implementations</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_IST_Team_Implementation_Mgr</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAN_All_Implementations</fullName>
        <columns>NAME</columns>
        <columns>IST_Status__c</columns>
        <columns>IST_Completed_Status__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Bill_Review_Completed__c</columns>
        <columns>Hand_off_Completed__c</columns>
        <columns>Training_Specialist_Assigned__c</columns>
        <columns>Adoption_Specialist_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>CAN - All Implementations</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Canada_IST</roleAndSubordinates>
            <roleAndSubordinates>EMEA_Canada_IST_Role</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAN_All_Open_Implementations</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Owner__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>IST_Status__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Bill_Review_Completed__c</columns>
        <columns>Hand_off_Completed__c</columns>
        <columns>Adoption_Specialist_Assigned__c</columns>
        <columns>Training_Specialist_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Completed_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>CAN - All Open Implementations</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Canada_IST</roleAndSubordinates>
            <roleAndSubordinates>EMEA_Canada_IST_Role</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAN_All_Review_Automat_Implementations</fullName>
        <columns>NAME</columns>
        <columns>IST_Status__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>Adoption_Specialist_Assigned__c</columns>
        <columns>Implementation_Owner__c</columns>
        <columns>IST_Recent_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Completed_Status__c</field>
            <operation>equals</operation>
            <value>No IS Assigned</value>
        </filters>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>CAN - All Review/Automat Implementations</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Canada_IST</roleAndSubordinates>
            <roleAndSubordinates>EMEA_Canada_IST_Role</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAN_IST_Created_THIS_WEEK</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Owner__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>IST_Status__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Bill_Review_Completed__c</columns>
        <columns>Hand_off_Completed__c</columns>
        <columns>Adoption_Specialist_Assigned__c</columns>
        <columns>Training_Specialist_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>adavi</value>
        </filters>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>CAN - IST Created THIS WEEK</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Canada_IST</roleAndSubordinates>
            <roleAndSubordinates>EMEA_Canada_IST_Role</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IST_Created_THIS_WEEK</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Owner__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>IST_Status__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Bill_Review_Completed__c</columns>
        <columns>Hand_off_Completed__c</columns>
        <columns>Adoption_Specialist_Assigned__c</columns>
        <columns>Training_Specialist_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>adavi</value>
        </filters>
        <filters>
            <field>Owner_Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <label>IST Created THIS WEEK</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>NA_IST_Team</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IST-{000000}</displayFormat>
        <label>Implementation Services Name</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01If00000004NJcEAM_00Nf0000000KH0NEAW</fullName>
        <active>true</active>
        <errorMessage>Please make sure the IsMaster Implementation checkbox is selected on the record you are trying to lookup.</errorMessage>
        <field>Implementation_Services__c.Master_Implementation__c</field>
        <filterItems>
            <field>Implementation_Services__c.Master_Implementation_Record__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Implementation Services_Master Implement</name>
    </namedFilters>
    <pluralLabel>Implementation Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_chg_Top10_Mgr_Notes_Unless_Mgr</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.Id &lt;&gt; &apos;0053000000620A0&apos;,
$User.Id &lt;&gt; &apos;005a0000009WIUc&apos;,
$User.Id &lt;&gt; &apos;005300000065o6P&apos;,
$User.Id &lt;&gt; &apos;00530000007dKU2&apos;,
OR(
ISCHANGED(Manager_Only_Notes__c)
)
)</errorConditionFormula>
        <errorMessage>You do not have permission to modify the following fields:  Top 10 Contract Signed, Top 10 Pre Contract, Manager Only Notes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EMEA_IST_can_only_select_EOM_and_26th</fullName>
        <active>true</active>
        <description>for Bill Cycle</description>
        <errorConditionFormula>AND(
ISPICKVAL(Bill_Cycle__c, &quot;5&quot;) ||
ISPICKVAL(Bill_Cycle__c, &quot;12&quot;) ||
ISPICKVAL(Bill_Cycle__c, &quot;19&quot;),
ISPICKVAL($User.Region__c, &quot;EMEA&quot;)
)</errorConditionFormula>
        <errorDisplayField>Bill_Cycle__c</errorDisplayField>
        <errorMessage>A Bill Cycle of either 26 or EOM is required for EMEA Implementations.  Please select one of these values and save the record again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IST_Status_cannot_be_Reviewed_Automated</fullName>
        <active>false</active>
        <description>Cannot be unless admin or angelina, karen, or heather</description>
        <errorConditionFormula>AND(
OR(
INCLUDES(IST_Status__c, &quot;No IS Assigned&quot;), 
ISPICKVAL(Implementation_Type__c, &quot;N/A&quot;)
),
NOT(CONTAINS($UserRole.Name, &quot;IST&quot;) &amp;&amp; CONTAINS($UserRole.Name, &quot;Mgr&quot;)
),
$User.Override_Validation_Rules__c = False
)</errorConditionFormula>
        <errorMessage>You do not have permission to set the Implementation Stage or Customer Type to this value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>x_IST_Link_to_CIF_required</fullName>
        <active>false</active>
        <errorConditionFormula>/*OR(
*/
AND(
Final_CIF_Uploaded__c = True,
ISBLANK(Link_to_Final_CIF__c),
$User.Override_Validation_Rules__c = False 
)
/*
AND(
Final_CIF_Uploaded__c = False,
!ISBLANK(Link_to_Final_CIF__c),
$User.Override_Validation_Rules__c = False 
)
)
*/</errorConditionFormula>
        <errorMessage>Please make sure both the Final CIF Uploaded and the Link to Final CIF are filled out.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>x_IST_Link_to_License_List_Required</fullName>
        <active>false</active>
        <errorConditionFormula>/*OR( */
AND( 
License_List_Uploaded__c  = True,
ISBLANK(Link_to_License_List__c) ||
ISBLANK(Link_to_Feature_Sheet__c),
$User.Override_Validation_Rules__c = False 
)
/*
AND(
License_List_Uploaded__c  = False,
!ISBLANK(Link_to_License_List__c) ||
!ISBLANK(Link_to_Feature_Sheet__c),
$User.Override_Validation_Rules__c = False 
)
)
*/</errorConditionFormula>
        <errorMessage>Please fill out the Link to License List &amp; Link to Feature Sheet when selecting the License List Uploaded checkbox.</errorMessage>
    </validationRules>
</CustomObject>